--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,4 +1,4 @@
-name: Build Debug
+name: Build CStrike Debug
 
 on:
   push:
@@ -13,12 +13,12 @@ jobs:
       - uses: actions/checkout@v4
       - name: 安装依赖
         run: sudo apt-get update && sudo apt-get install -y build-essential g++ gcc make
-      - name: 编译 Debug 版本
+      - name: 编译 CStrike Debug 版本
         run: |
-          ./configure --enable-debug
+          cd modules/cstrike/cstrike
           make CFLAGS="-g -O0"
       - name: 保存构建产物
         uses: actions/upload-artifact@v4
         with:
-          name: amxmodx-debug-build
-          path: build/
+          name: cstrike-debug-build
+          path: modules/cstrike/cstrike/build/
